# showdown

./: README.md
clicks/: .env  .gitignore  DEVELOPMENT.md  LICENSE  README.md  eval.py  eval.py.new  pyproject.toml  setup.py
clicks/scripts/: calculate_latency.py  collect_runs.py
clicks/src/clicks/: __init__.py  api_client_base.py  base_models.py  config.py  eval_dolphin.py  multi_model_eval.py  setup_config.py  voice_eval.py
clicks/src/clicks/evaluate/: __init__.py  ace.py  ace.py.new  models.py  utils.py
